Fixed spacing on main page, added author + des

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
   justify-content: space-between;
 }
 .nav {
-  width: 25%;
+  width: 20%;
   height: 100vh;
   float: left;
   display: flex;
@@ -64,12 +64,14 @@ footer {
 }
 
 .posts {
-  margin-left: 25%;
+  margin-top: 5em;
+  margin-left: 35%;
   display: flex;
   flex-direction: column;
   width: 75%;
-  justify-content: space-between;;
-  margin-top: 60px;
+  justify-content: space-between;
+  margin-bottom: 5em;
+
 }
 
 .post {
@@ -98,6 +100,7 @@ footer {
 
 .banner h1 {
   float: left;
+  margin-left: 1.5em;
 }
 
 .banner-btn {
